step4 - loom server solution